--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,11 @@
             <version>1.70</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
 
     </dependencies>
 
